<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aula.atividades.datatotable.Add_Event"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_data"
        android:id="@+id/TV_add_data" />

    <EditText
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Date"
        android:layout_below="@+id/TV_add_data"
        android:inputType="date"
        android:nextFocusDown="@+id/ET_add_Time_Ini"
        android:layout_marginTop="-10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:clickable="false"
        android:layout_alignRight="@+id/BT_add_DatePicker"
        android:layout_alignEnd="@+id/BT_add_DatePicker"
        android:textColor="#107016" />

    <Button
        android:layout_width="140px"
        android:layout_height="wrap_content"
        android:text="@string/BT_add_DatePicker"
        android:id="@+id/BT_add_DatePicker"
        android:layout_gravity="center_horizontal"
        android:textSize="15px"
        android:layout_alignTop="@+id/ET_add_Date"
        android:layout_alignRight="@+id/ET_add_Local"
        android:layout_alignEnd="@+id/ET_add_Local" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_Time"
        android:id="@+id/TV_add_Time"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Time_Ini"
        android:layout_marginTop="-10dp"
        android:layout_below="@id/TV_add_Time"
        android:inputType="time"
        android:editable="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="as"
        android:id="@+id/as"
        android:layout_marginTop="20dp"
        android:layout_alignTop="@id/ET_add_Time_Ini"
        android:layout_toRightOf="@+id/ET_add_Time_Ini"
         />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET_add_Time_Fim"
        android:layout_alignTop="@+id/ET_add_Time_Ini"
        android:layout_toRightOf="@+id/as"
        android:layout_toEndOf="@+id/as"
        android:inputType="time" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CKB_add_Dia_interio"
        android:id="@+id/CKB_add_Dia_interio"
        android:layout_alignTop="@+id/ET_add_Time_Fim"
        android:layout_centerHorizontal="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_add_Local"
        android:id="@+id/TV_add_Local"
        android:layout_below="@+id/ET_add_Time_Ini"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ET_add_Local"
        android:layout_below="@id/TV_add_Local"
        android:layout_marginTop="-10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_add_descricao"
        android:layout_below="@id/ET_add_Local" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ET_add_Descricao"
        android:layout_below="@+id/TV_add_descricao"
        android:layout_marginTop="-10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TV_AddEvent_Participantes"
        android:id="@+id/TV_add_participantes"
        android:layout_below="@id/ET_add_Descricao"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ET_add_Participantes"
        android:layout_below="@id/TV_add_participantes" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CK_Text_Repeticao"
        android:id="@+id/CKB_Repetir"
        android:layout_below="@+id/ET_add_Participantes"
        android:checked="false" />

    <Spinner
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/SP_tipo_Repeticao"
        android:background="#afffb2"
        android:minWidth="530dp"
        android:longClickable="false"
        android:minHeight="40dp"
        android:dropDownSelector="#479349"
        android:nestedScrollingEnabled="true"
        android:spinnerMode="dialog"
        android:layout_below="@id/CKB_Repetir"
        android:visibility="invisible" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TV_AddEvent_Tipo"
        android:id="@+id/TV_add_tipo"
        android:layout_below="@id/CKB_Repetir" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SC"
        android:layout_below="@+id/TV_add_tipo">
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SP_add_tipo"
        android:background="#afb7ff"
        android:minWidth="530dp"
        android:longClickable="false"
        android:minHeight="40dp"
        android:dropDownSelector="#d9e7f8"
        android:nestedScrollingEnabled="true"
        android:spinnerMode="dialog" />
    </ScrollView>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BT_add_add_Tipo"
        android:id="@+id/BT_add_add_Tipo"
        android:layout_below="@+id/SC" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/BT_add_evento"
        android:layout_below="@+id/BT_add_add_Tipo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp" />




</RelativeLayout>
</ScrollView>